# bevy_ggrs_fighting

./: Cargo.toml  bevy_ggrs_fighting.code-workspace  tlconfig.lua
.cargo/: config.toml
assets/data/: test.json  test.sl.json
assets/data/fighters/abe/: fighter_data.json
assets/data/fighters/ryo/: ryo.fighter  ryo.hurt  ryo.ron  ryo.states
assets/data/fighters/ryo/scripts/: 5A.lua  Back Walk.lua  Forward Walk.lua  Idle.lua  x.json5
assets/data/fighters/tahu/: fighter_data.json  light.wren  states.json  states.sl.json
assets/models/: ryu.glb  ryu1.glb  ryu_new.glb  sdfdsfsdfs.glb
assets/schema/: hitbox_schema.json  state_list_schema.json  state_schema.json
assets/scripts/: fighter.wren  state1.wren  test.lua  test.tl  test.wren
src/: lib.rs  main.rs
src/battle/: mod.rs
src/fighter/: data.rs  event.rs  mod.rs  modifiers.rs  state.rs  systems.rs
src/fighter/animation/: mod.rs
src/fighter/hit/: mod.rs
src/game/: debug.rs  mod.rs
src/input/: mod.rs
src/util/: mod.rs  pickle_asset_loader.rs  scripting.rs
