[package]
name = "bevy_ggrs_fighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3



[dependencies]
structopt = "0.3"
bevy = {version = "0.9.1", features = ["serialize", "trace"]}
bevy_ggrs = "0.11.0"
#bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs"}

#ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"]}
ggrs = { version = "0.9.3", features = ["sync-send"]}

aws-sdk-gamelift = "0.21.0"
aws-config = "0.51.0"
aws-sdk-cognitoidentity = "0.21.0"
tokio = { version = "1", features = ["full"] }


bitflags = "1.3"
ux = "0.1.4"
bytemuck = {version="1.7.3", features= ["derive"]}
regex = "1"
packed_struct = {version="0.10.0", features= ["use_serde"]}

parry3d = "0.13.0"
nalgebra = {version = "0.32.1", features = ["glam022"]}

serde = "1.0.137"
serde_json = "1.0.81"
serde_closure = "0.3.2"
typetag = "0.2.0"
bevy_common_assets = {version = "0.4.0", features = ["json"]}
iyes_loopless = "0.9.1"
iyes_progress = {version = "0.7.1", features = ["assets", "iyes_loopless"]}
bevy_prototype_lyon = "0.7.2"
leafwing-input-manager = "0.8.0"
bevy-scene-hook = "5.2.0"



bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
#bevy_editor_pls = "0.2.0"
#bevy-inspector-egui = "0.17.0"
#bevy_prototype_frametime_display_plugin = { git = "https://github.com/IceSentry/bevy_prototype_frametime_display_plugin" }

#required because above doesn't reimport Inspectable
#bevy-inspector-egui = "0.8.0"