[package]
name = "bevy_ggrs_fighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3



[dependencies]
structopt = "0.3"
bevy = {version = "0.10.1", features = ["serialize", "trace"]}
bevy_ggrs = "0.12.0"
ggrs = { version = "0.9.4", features = ["sync-send"]}

aws-sdk-gamelift = "0.21.0"
aws-config = "0.51.0"
aws-sdk-cognitoidentity = "0.21.0"
tokio = { version = "1", features = ["full"] }


bitflags = "1.3"
ux = "0.1.4"
bytemuck = {version="1.7.3", features= ["derive"]}
regex = "1"
packed_struct = {version="0.10.0", features= ["use_serde"]}

parry3d = "0.13.0"
nalgebra = {version = "0.32.2", features = ["glam023"]}

serde = "1.0.137"
serde_json = "1.0.93"
serde-pickle = "1.1.1"
ron = "0.8.0"
serde_closure = "0.3.2"
typetag = "0.2.0"


bevy_common_assets = {version = "0.6.0", features = ["json"]}
bevy_asset_loader = {version  ="0.16.0", features = ["standard_dynamic_assets"]}



iyes_loopless = "0.9.1"
iyes_progress = {version = "0.8.0", features = ["assets"]}

leafwing-input-manager = "0.9.1"
bevy_mod_scripting = { git = "https://github.com/makspll/bevy_mod_scripting", features = ["lua54","teal","lua_script_api", "doc_always"]}


youme = { git = "https://github.com/leonskidev/youme" }


bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy-inspector-egui = "0.18.3"
#bevy_prototype_frametime_display_plugin = { git = "https://github.com/IceSentry/bevy_prototype_frametime_display_plugin" }



[[bin]]
name = "hitbox_editor"
path = "src/bin/editor.rs"

[[bin]]
name = "bevy_ggrs_fighting"
path = "src/bin/bevy_ggrs_fighting.rs"

[lib]
name = "bevy_fighting_lib"
path = "src/lib.rs"